--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,7 +2,7 @@ html{
     font-size: 14px;
     background-color: #ffffff
 }
-.blue{
+.row-blue{
     background-color: #111D4A;
     color: #ffffff; 
 }
