still trying to remove this pink!

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,7 +16,7 @@ p{
     color: #2B3D41;
 }
 a{
-    color: #F9B9F2;
+    color: #2b3d41;
     text-decoration: underline;
 }
 a:hover{
@@ -34,7 +34,7 @@ a:hover{
     text-decoration: underline;
 }
 .champ{
-    background-color: #83A0A0;
+    background-color: #FFCF99;
     color: #2B3D41;
 }
 .tools-info{
