--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,7 +53,7 @@ a:hover{
 }
 .griffith{
         display: inline-block;
-        color: #0000;
+        color: #2B3D41;
         background: #Ffcf99;
         padding: 10px 15px;
         border: 1px solid #FFCF99;
@@ -61,6 +61,6 @@ a:hover{
     }
 .griffith:hover{
     font-weight: bold;
-    color: #83A0A0;
+    color: #2B3D41;
     text-decoration: underline;
 } 
